fixed height overflow bug

--- a/components/home/scss/users.module.scss
+++ b/components/home/scss/users.module.scss
@@ -9,6 +9,7 @@
 }
 .user_wrapper {
     overflow-y: scroll;
+    height: calc(100% - 61px);
 }
 .persons {
     display: flex;
